# eda-tools

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  Makefile  README-macports.md  README.md  galaxy.yml  pyproject.toml
.github/workflows/: lint.yml
aqua/skim-app/: Portfile
cad/OpenSTA/: Portfile
cad/cudd/: Portfile
cad/eda-icall/: Portfile
cad/eda-lemon/: Portfile
cad/klayout/: Portfile
cad/netgen-lvs/: Portfile
cad/openvaf/: Portfile
cad/yosys/: Portfile
playbooks/: toolchain.yml
python/py-pcpp/: Portfile
python/py-volare/: Portfile
python/py-zstandard/: Portfile
roles/cudd/: README.md
roles/cudd/defaults/: main.yml
roles/cudd/meta/: main.yml
roles/cudd/tasks/: cudd.yml  main.yml
roles/cudd/vars/: darwin.yml  redhat.yml
roles/eda_common/: README.md
roles/eda_common/defaults/: main.yml
roles/eda_common/handlers/: main.yml
roles/eda_common/meta/: main.yml
roles/eda_common/tasks/: darwin.yml  main.yml  redhat.yml
roles/eda_common/vars/: darwin.yml  redhat.yml
roles/netlistsvg/: README.md
roles/netlistsvg/defaults/: main.yml
roles/netlistsvg/meta/: main.yml
roles/netlistsvg/tasks/: main.yml
roles/netlistsvg/vars/: darwin.yml  redhat.yml
roles/opensta/: README.md
roles/opensta/defaults/: main.yml
roles/opensta/files/: patch-Network-string-spaceship.diff
roles/sby/: README.md
roles/yosys/: README.md
science/charon/: Portfile
science/kicad/: Portfile
science/trilinos-charon/: Portfile
science/trilinos16/: Portfile
science/xyce/: Portfile
x11/xcircuit/: Portfile
(+34 files in other folders)
