[project]
name = "icanalytica-eda"
version = "0.0.0"
description = "Dev tooling for the icanalytica.eda Ansible collection"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible-core>=2.20,<2.21",
    "ansible-lint>=26.1,<27",
    "molecule>=25",
    "molecule-plugins[docker]>=25",
    "yamllint>=1.37",
    "pytest>=8",
    "pytest-testinfra>=10",
]

[tool.uv]
package = false
